[package]
name = "peterinogl"
version = "0.1.0"
authors = ["peterli <peterlimail47@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sdl2]
version = "0.34.2"

[dependencies.gl]
version = "0.14.0"

[dependencies.glm]
version = "0.2.3"

[dependencies.stb_image]
version = "0.2.2"